<resources>
    <string name="app_name">RupicardTest</string>
    <string name="_1_cashback5x_rewardszero_forex_markup">1% Cashback5x + RewardsZero + Forex Markup</string>
    <string name="nx_wave_the_next_gen_credit_card_for_those_who_love_rewards"><b>NX Wave</b>. The next-gen credit card for those who love rewards.</string>
    <string name="earn_1_assured_cashback_on_your_spends_get_5x"><font color='#000000'>Earn 1% assured cashback</font> on your spends. Get <font color='#000000'>5X</font></string>
    <string name="more_value_than_cashback_at_the_uni_store_enjoy"><font color='#000000'>more value than cashback</font> at the Uni Store. Enjoy</string>
    <string name="round_the_clock_whatsapp_support_and_it_s">round the clock <font color='#000000'>Whatsapp support</font>. And it\'s</string>
    <string name="lifetime_free_no_joining_fee_no_annual_charges"><font color='#000000'>lifetime free</font>; no joining fee, no annual charges.</string>
</resources>